--- a/beautiful.html
+++ b/beautiful.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>this is beautiful</title>
+    <meta
+      name="description"
+      content="this is my first serious html project. i built it with love and i will never forget it."
+    />
+
+    <!-- fonts -->
+    <link rel="stylesheet" href="./fonts/stylesheet.css" />
+
     <link rel="stylesheet" type="text/css" href="beautiful.css" />
     <link
       rel="icon"
